#pragma once
#include <iostream>
class Business {
 public:
  void processOrder();
};
