#pragma once
#include <iostream>
class Logistics {
 public:
  void processTransport();
};
