#pragma once
#include <iostream>
class Platform {
 public:
  void processNeed();
};
