@startuml
class Client{
    + void order()
    + void process() override;
}
class Process{
    - shared_ptr<Business>* b
    - shared_ptr<Platform>* p
    - shared_ptr<Logistics>* l
    + {abstract} void process()
    + void makeProcess()
    + shared_ptr<Business>
}
class Platform{
    + void processNeed()
}
class Business{
    + void processOrder()
}
class Logistics{
    + void processTransport()
}
Client--|>Process
Process-->Platform: 电商平台处理
Process-->Business: 商家处理
Process-->Logistics: 快递处理
@enduml